; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_process_64.c___exit_idle.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_process_64.c___exit_idle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@is_idle = common dso_local global i32 0, align 4
@idle_notifier = common dso_local global i32 0, align 4
@IDLE_END = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @__exit_idle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__exit_idle() #0 {
  %1 = load i32, i32* @is_idle, align 4
  %2 = call i64 @x86_test_and_clear_bit_percpu(i32 0, i32 %1)
  %3 = icmp eq i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @IDLE_END, align 4
  %7 = call i32 @atomic_notifier_call_chain(i32* @idle_notifier, i32 %6, i32* null)
  br label %8

8:                                                ; preds = %5, %4
  ret void
}

declare dso_local i64 @x86_test_and_clear_bit_percpu(i32, i32) #1

declare dso_local i32 @atomic_notifier_call_chain(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
